--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "nodemon": "^3.1.0",
+    "mongodb": "^6.9.0",
     "mongoose": "^6.0.12",
-    "cors": "^2.8.5"
+    "nodemon": "^3.1.0"
   }
 }
